fix collapsing issue with build options, remove background from build options

--- a/browser/scss/player-view/main.scss
+++ b/browser/scss/player-view/main.scss
@@ -315,6 +315,9 @@ nav {
 	}
 	.text-side {
 		padding-left: 5px;
+		.options-button {
+			margin-bottom: 5px;
+		}
 	}
 	a {
 		color: inherit;
@@ -326,6 +329,10 @@ nav {
 			text-decoration: none;
 		}
 	}
+}
+
+.options-button {
+	margin-bottom: 5px;
 }
 
 selected-card {
